--- a/src/styles/guide.css
+++ b/src/styles/guide.css
@@ -8,11 +8,11 @@
 }
 
 body.open-schedule {
-  overflow: hidden;
+  overflow-y: hidden;
 }
 
 body.close-schedule {
-  overflow: hidden auto;
+  overflow-y: visible;
 }
 
 #schedule-container.open-schedule {
